fixed sticky navbar with overflow x

--- a/style.css
+++ b/style.css
@@ -3,11 +3,9 @@
     padding: 0;
     box-sizing: border-box;
     border:none;
+    overflow-x: clip; 
 }
 
-html, body {
-  overflow-x: hidden;
-}
 
 
 
@@ -184,7 +182,6 @@ html, body {
 }
 
 .dropdown {
-    position: relative;
     display: none;
     margin-left: 90%;
   }
